[package]
name = "wasmenv"
description = "wasmenv - a version manager for wasm runtimes"
license = "MIT"
version = "0.2.1"
readme = "readme.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
chrono = "0.4.24"
clap = {version = "4.2.4", features = ["derive"]}
comfy-table = "6.1.4"
directories = "5.0.0"
dirs = "5.0.0"
flate2 = "1.0.25"
indicatif = "0.17.3"
is_executable = "1.0.1"
reqwest = { version = "0.11.16", features = ["blocking", "json", "rustls-tls"] }
semver = {path = "./vendor/semver"}
serde = {version = "1.0.160", features = ["derive"]}
tar = "0.4.38"
tempfile = "3.5.0"
which = "4.4.0"
